# clinical-notes-generation

./: .env.example  .gitignore  AGENT_FRAMEWORK.md  CASE_BUILDING.md  CLAUDE.md  OVERVIEW.md  README.md  pyproject.toml  random_disease.jsonl  test_data.csv
prompts/: clinician.md  constructor_merge.md  constructor_plan.md  coordinator.md  investigator.md  narrator.md  orchestrator.md  scribe.md
scripts/: build_case.py  export_ground_truth_csv.py  export_ground_truth_for_batch.py  export_metadata_csv.py  export_notes_csv.py  export_notes_json.py  generate.py  strip_jsonl_fields.py  view_case.py
scripts/tools/: init_history.py  load_knowledge.py  parse_seed.py  save_case.py  schema.py  validate.py
src/clinical_notes/: README.md  __init__.py  case_builder.py  case_runner.py  config.py  io.py  knowledge.py  llm.py
src/clinical_notes/agents/: __init__.py  base.py  clinician.py  constructor.py  coordinator.py  investigator.py  narrator.py  orchestrator.py  scribe.py
src/clinical_notes/llm/: __init__.py  _anthropic.py  _openai.py  _types.py
src/clinical_notes/models/: __init__.py  case.py  investigation.py  note.py  patient.py  timeline.py
src/clinical_notes/prompts/: clinician.py  constructor.py  coordinator.py  investigator.py  narrator.py  orchestrator.py  scribe.py
src/clinical_notes/viewer/: renderer.py  template.py
tests/: test_agents.py  test_case_builder.py  test_case_runner.py  test_constructor.py  test_investigation_models.py  test_investigator.py  test_knowledge.py  test_llm.py  test_models.py
