[project]
name = "clinical-notes-generation"
version = "0.1.0"
description = "Multi-agent framework for generating synthetic clinical notes datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
generate = "scripts.generate:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
